--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_activity_adding_gift">AddingGiftActivity</string>
     <string name="title_activity_image_selecter">ImageSelecterActivity</string>
 
-<!-- image selector-->
+    <!-- image selector-->
     <string name="msg_failed_to_get_picture">Failed to get image</string>
     <string name="lbl_pick_single_image">Select single image</string>
     <string name="lbl_pick_multiple_image">Select multiple images</string>
@@ -24,5 +24,5 @@
     !-- progress botton -->
     <string name="Complete">Complete</string>
     <string name="Error">Error</string>
-    <string name="Upload">Upload</string>
+    <string name="Upload">Save</string>
 </resources>
